<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="15dp"
                android:id="@+id/imageViewProfilePicture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/_665689151860"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:paddingLeft="30dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewNomFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/firstname" />

                <TextView
                    android:id="@+id/textViewTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tel" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/textViewAdress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adress" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewExp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/textViewExp"/>

        <ListView
            android:id="@+id/ListViewExp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_experience" />

        <TextView
            android:id="@+id/textViewFormation"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/textViewFormation"/>

        <ListView
            android:id="@+id/ListViewFormation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_formation"/>

        <Button
            android:id="@+id/ButtonCompetences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#35C3B2"
            android:text="@string/ButtonCompetences"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>